--- a/precip3Ridem.html
+++ b/precip3Ridem.html
@@ -75,7 +75,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 }</code></pre>
 <p>Now we can use this like any other function in R.</p>
 <pre class="r"><code>myMean(vector = rnorm(10))</code></pre>
-<pre><code>## [1] 0.02957</code></pre>
+<pre><code>## [1] 0.01739</code></pre>
 </div>
 <div id="plot-function" class="section level2">
 <h2>Plot function</h2>
@@ -185,6 +185,71 @@ precipSubsetPlot(data = wide.precip.df, site = &quot;LMG-05-0009&quot;, site.col
                  date.col = &quot;date&quot;, precip.col = &quot;precipitation&quot;,  sample.col = &quot;sat&quot;, 
                  sample.name = &quot;% Saturation&quot;, conditioned = &quot;TRUE&quot;, save = TRUE, 
                  file.extension = &quot;png&quot;)</code></pre>
+</div>
+<div id="loops" class="section level2">
+<h2>Loops</h2>
+<p>Like most programming languages, R has while loops and for loops. For loops are the most common loops used in , so we’ll cover how they are written. But in R, it’s even more common to use a special family of loop operations called <code>apply()</code> functions. We’ll end up using one of those to automate our precipitation graphs, but first we’ll go over the for loop.</p>
+</div>
+<div id="for-loop" class="section level2">
+<h2>For loop</h2>
+<p>In most programming languages, the for loop would be set up in this way:</p>
+<pre class="r"><code>i &lt;- 1
+for(i in sequence){
+  # operation indexed by i
+}</code></pre>
+<p>So you first create an index variable, traditionally named <code>i</code>, and give it an initial value of <code>1</code> (or <code>0</code>, or whatever initial value makes sense for the situation). The <code>sequence</code> variable would be a sequence of values that you want the index variable to take while the statements in the brackets are iterated. Lets look at a real example using the <code>myMean()</code> function we created above.</p>
+<pre class="r"><code>list.of.vectors &lt;- list(1:20, rnorm(10), rnorm(30))
+
+i &lt;- 1
+vector.means &lt;- c()
+for(i in 1:3){
+  vector.means[i] &lt;- myMean(list.of.vectors[[i]])
+  i &lt;- i + 1
+}
+
+vector.means</code></pre>
+<pre><code>## [1] 10.500000 -0.044970  0.004891</code></pre>
+<p>So we created the index variable <code>i</code> with the intial value of <code>1</code>, created the empty vector <code>vector.means</code> to collected the mean values in, and ran the for loop over the sequence <code>1:3</code>. This means that in the first iteration the average of the first vector in the list <code>list.of.vectors</code> is placed as the first value in <code>vector.means</code>, i.e. we have the expression <code>vector.means[1] &lt;- myMean(list.of.vectors[[1]])</code>. And the last line of the loop adds a one to the index variable, so <code>i</code> takes on a value of <code>2</code> for the next iteration, and we have <code>vector.means[2] &lt;- myMean(list.of.vectors[[2]])</code>. This happens a third time, when the index value is <code>3</code>, and the for loop stops after this iteration because <code>i</code> has taken the last value in the sequence.</p>
+<p>In R, you can actually simplify the expression a little bit, because you don’t have to manipulate the index variable. This will also work:</p>
+<pre class="r"><code>vector.means &lt;- c()
+for(i in 1:3){
+  vector.means[i] &lt;- myMean(list.of.vectors[[i]])
+}
+
+vector.means</code></pre>
+<pre><code>## [1] 10.500000 -0.044970  0.004891</code></pre>
+</div>
+<div id="apply-functions" class="section level2">
+<h2>apply functions</h2>
+<p>Experienced R programmers typically do not use for loops, especially for the example we just looked at. This is an ideal situation for the <code>lapply()</code> function. <code>lappy()</code> is one of a family of functions that are referred to as <code>apply</code> functions. Type <code>?apply</code> and <code>?lapply</code> to see descriptions of the many related functions.</p>
+<p><code>lapply()</code> takes just two arguments (at a minimum), <code>lapply(X, FUN, ...)</code>. <code>X</code> is a list of objects that you want to perform an operation on, and <code>FUN</code> is the function that you want to apply to each object. In our situation, we want to apply <code>myMean()</code> to <code>list.of.vectors</code>.</p>
+<pre class="r"><code>lapply(list.of.vectors, myMean)</code></pre>
+<pre><code>## [[1]]
+## [1] 10.5
+## 
+## [[2]]
+## [1] -0.04497
+## 
+## [[3]]
+## [1] 0.004891</code></pre>
+<p><code>lapply()</code> always returns a list of objects. If we wanted the output to be a vector, we could use the <code>sapply()</code> function which simplifies what is returned.</p>
+<pre class="r"><code>sapply(list.of.vectors, myMean)</code></pre>
+<pre><code>## [1] 10.500000 -0.044970  0.004891</code></pre>
+</div>
+<div id="automating-the-graphs" class="section level2">
+<h2>Automating the graphs</h2>
+<p>Now, if we want to make a lot of precipitation graphs, we need to set up our code so that we can easily loop through all of the arguments necessary for each plot. For example, if we wanted to plot 3 different sampling substances at 2 sites, we could visualize these scenarios in a data frame.</p>
+<pre class="r"><code>substance &lt;- c(&quot;sat&quot;, &quot;e_coli&quot;, &quot;ph&quot;)
+station &lt;- c(&quot;LMG-05-0009&quot;, &quot;LM-05-0004&quot;)
+scenarios &lt;- expand.grid(substance, station)
+scenarios</code></pre>
+<pre><code>##     Var1        Var2
+## 1    sat LMG-05-0009
+## 2 e_coli LMG-05-0009
+## 3     ph LMG-05-0009
+## 4    sat  LM-05-0004
+## 5 e_coli  LM-05-0004
+## 6     ph  LM-05-0004</code></pre>
 </div>
 <div id="section" class="section level2">
 <h2>…</h2>
