--- a/precip3Ridem.html
+++ b/precip3Ridem.html
@@ -75,12 +75,12 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 }</code></pre>
 <p>Now we can use this like any other function in R.</p>
 <pre class="r"><code>myMean(vector = rnorm(10))</code></pre>
-<pre><code>## [1] -0.05157</code></pre>
+<pre><code>## [1] 0.2434</code></pre>
 </div>
 <div id="plot-function" class="section level2">
 <h2>Plot function</h2>
-<p>We’re going to write our own function that will take watershed data and create a precipitation graph. We’ll call our function <code>precipPlot()</code> and it’ll have the following general outline:</p>
-<pre class="r"><code>precipPlot &lt;- function(date, precip, sample, trellis = FALSE, ...){
+<p>We’re going to write our own function that will take watershed data and create a precipitation graph. We’ll call our function <code>prPlot()</code> and it’ll have the following general outline:</p>
+<pre class="r"><code>prPlot &lt;- function(date, precip, sample, trellis = FALSE, ...){
   
   if(trellis == FALSE){
     
@@ -97,7 +97,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 }</code></pre>
 <p>The three arguments we have so far are the minimum arguments we need to create a graph. We’ll add more as we go along. Right now the requirements for these arguments are that <code>date</code> has the <code>&quot;Date&quot;</code> class and that <code>precip</code> and <code>sample</code> have the <code>&quot;numeric&quot;</code> class; that the three vectors are of the same length (and are ordered appropriately); and that <code>trellis</code> is either <code>TRUE</code> or <code>FALSE</code>.</p>
 <p>Now we’ll simply add code for the plot into braces.</p>
-<pre class="r"><code>precipPlot &lt;- function(date, precip, sample, trellis, sample.label, ...){
+<pre class="r"><code>prPlot &lt;- function(date, precip, sample, trellis, sample.label, ...){
   
   if(trellis == FALSE){
     
@@ -136,10 +136,11 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
          par.settings = simpleTheme(col = c(&quot;black&quot;, &quot;red&quot;), pch = c(NA, 16)))
   
 }</code></pre>
-<p>Before we can use this function, we need data in the proper format. So we’ll write a function that subsets the <code>wide.precip.df</code> data frame, properly formats the data, and calls the <code>precipPlot</code> function.</p>
-<pre class="r"><code>precipSubsetPlot &lt;- function(data, site, site.col, date.col, precip.col, 
-                             sample.col, sample.name, conditioned, save = TRUE,
-                             file.prefix = NULL, file.extension = &quot;png&quot;, ...){
+<p>Before we can use this function, we need data in the proper format. So we’ll write a function that subsets the <code>wide.precip.df</code> data frame, properly formats the data, and calls the <code>prPlot</code> function.</p>
+<pre class="r"><code>prSubsetPlot &lt;- function(data, site, site.col, date.col, precip.col, 
+                         sample.col, sample.name, conditioned = TRUE,
+                         save = TRUE, file.prefix = NULL, 
+                         file.extension = &quot;png&quot;, ...){
   
   site.df &lt;- data[data[, site.col] == site, c(date.col, sample.col)]
   
@@ -149,7 +150,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
   
   remove(data, precip.df)
   
-  plot &lt;- precipPlot(date = site.df[, date.col], precip = site.df[, precip.col],
+  plot &lt;- prPlot(date = site.df[, date.col], precip = site.df[, precip.col],
                      sample = site.df[, sample.col], trellis = conditioned,
                      sample.label = sample.name)
   
@@ -181,7 +182,7 @@ library(IDEMdata)
 
 data(wide_precip)
 
-precipSubsetPlot(data = wide.precip.df, site = &quot;LMG-05-0009&quot;, site.col = &quot;station&quot;, 
+prSubsetPlot(data = wide.precip.df, site = &quot;LMG-05-0009&quot;, site.col = &quot;station&quot;, 
                  date.col = &quot;date&quot;, precip.col = &quot;precipitation&quot;,  sample.col = &quot;sat&quot;, 
                  sample.name = &quot;% Saturation&quot;, conditioned = &quot;TRUE&quot;, save = TRUE, 
                  file.extension = &quot;png&quot;)</code></pre>
@@ -208,7 +209,7 @@ for(i in 1:3){
 }
 
 vector.means</code></pre>
-<pre><code>## [1] 10.50000 -0.89736  0.09563</code></pre>
+<pre><code>## [1] 10.5000  0.1615 -0.2071</code></pre>
 <p>So we created the index variable <code>i</code> with the intial value of <code>1</code>, created the empty vector <code>vector.means</code> to collected the mean values in, and ran the for loop over the sequence <code>1:3</code>. This means that in the first iteration the average of the first vector in the list <code>list.of.vectors</code> is placed as the first value in <code>vector.means</code>, i.e. we have the expression <code>vector.means[1] &lt;- myMean(list.of.vectors[[1]])</code>. And the last line of the loop adds a one to the index variable, so <code>i</code> takes on a value of <code>2</code> for the next iteration, and we have <code>vector.means[2] &lt;- myMean(list.of.vectors[[2]])</code>. This happens a third time, when the index value is <code>3</code>, and the for loop stops after this iteration because <code>i</code> has taken the last value in the sequence.</p>
 <p>In R, you can actually simplify the expression a little bit, because you don’t have to manipulate the index variable. This will also work:</p>
 <pre class="r"><code>vector.means &lt;- c()
@@ -217,7 +218,7 @@ for(i in 1:3){
 }
 
 vector.means</code></pre>
-<pre><code>## [1] 10.50000 -0.89736  0.09563</code></pre>
+<pre><code>## [1] 10.5000  0.1615 -0.2071</code></pre>
 </div>
 <div id="apply-functions" class="section level2">
 <h2>apply functions</h2>
@@ -228,19 +229,19 @@ vector.means</code></pre>
 ## [1] 10.5
 ## 
 ## [[2]]
-## [1] -0.8974
+## [1] 0.1615
 ## 
 ## [[3]]
-## [1] 0.09563</code></pre>
+## [1] -0.2071</code></pre>
 <p><code>lapply()</code> always returns a list of objects. If we wanted the output to be a vector, we could use the <code>sapply()</code> function which simplifies what is returned.</p>
 <pre class="r"><code>sapply(list.of.vectors, myMean)</code></pre>
-<pre><code>## [1] 10.50000 -0.89736  0.09563</code></pre>
+<pre><code>## [1] 10.5000  0.1615 -0.2071</code></pre>
 </div>
 <div id="automating-the-graphs" class="section level2">
 <h2>Automating the graphs</h2>
 <p>Now, if we want to make a lot of precipitation graphs, we need to set up our code so that we can easily loop through all of the arguments necessary for each plot. For example, if we wanted to plot 3 different sampling substances at 2 sites, we could visualize these scenarios in a data frame.</p>
 <pre class="r"><code>substance &lt;- c(&quot;sat&quot;, &quot;e_coli&quot;, &quot;ph&quot;)
-station &lt;- c(&quot;LMG-05-0009&quot;, &quot;LM-05-0004&quot;)
+station &lt;- c(&quot;LMG-05-0009&quot;, &quot;LMG-05-0004&quot;)
 scenarios &lt;- expand.grid(substance, station, stringsAsFactors = FALSE)
 colnames(scenarios) &lt;- c(&quot;substance&quot;, &quot;station&quot;)
 scenarios</code></pre>
@@ -248,9 +249,9 @@ scenarios</code></pre>
 ## 1       sat LMG-05-0009
 ## 2    e_coli LMG-05-0009
 ## 3        ph LMG-05-0009
-## 4       sat  LM-05-0004
-## 5    e_coli  LM-05-0004
-## 6        ph  LM-05-0004</code></pre>
+## 4       sat LMG-05-0004
+## 5    e_coli LMG-05-0004
+## 6        ph LMG-05-0004</code></pre>
 <p>One way to run the <code>precipSubsetPlot()</code> function on all of these scenarios is to use a for loop that loops through the index of rows on the data frame. The only thing we’re missing is the label for the substance on the graph, so first we’ll create a vector of substance names.</p>
 <pre class="r"><code>substance.names &lt;- scenarios[, &quot;substance&quot;]
 substance.names[substance.names == &quot;sat&quot;] &lt;- &quot;% Saturation&quot;
@@ -258,18 +259,45 @@ substance.names[substance.names == &quot;e_coli&quot;] &lt;- &quot;E. coli (MPN/
 substance.names[substance.names == &quot;ph&quot;] &lt;- &quot;pH (SU)&quot;
 
 for(i in 1:dim(scenarios)[1]){
-  precipSubsetPlot(data = wide.precip.df, site = scenarios[i, &quot;station&quot;], 
+  prSubsetPlot(data = wide.precip.df, site = scenarios[i, &quot;station&quot;], 
                    site.col = &quot;station&quot;, date.col = &quot;date&quot;, 
                    precip.col = &quot;precipitation&quot;,  sample.col = scenarios[i, &quot;substance&quot;], 
                    sample.name = substance.names[i], conditioned = &quot;TRUE&quot;, save = TRUE, 
                    file.extension = &quot;png&quot;)
 }</code></pre>
 <p>We could also use an <code>apply</code> function called <code>mapply()</code>.</p>
-<pre class="r"><code>mapply(FUN = precipSubsetPlot, site = scenarios[, &quot;station&quot;], 
+<pre class="r"><code>mapply(FUN = prSubsetPlot, site = scenarios[, &quot;station&quot;], 
        sample.col = scenarios[, &quot;substance&quot;], sample.name = substance.names,
        MoreArgs = list(data = wide.precip.df, site.col = &quot;station&quot;, date.col = &quot;date&quot;, 
                        precip.col = &quot;precipitation&quot;, conditioned = &quot;TRUE&quot;, save = TRUE, 
                        file.extension = &quot;png&quot;))</code></pre>
+<p>Finally, to put all of these funtions together and make the automation of precipitaiton graphs as simple as possible, we make one function that will loop through all of the plots and save them to the working directory.</p>
+<pre class="r"><code>precipPlot &lt;- function(data, date.column = &quot;date&quot;, sites, site.column = &quot;station&quot;,
+                       substances, substance.names, precip.column = &quot;precipitation&quot;,
+                       trellis = &quot;TRUE&quot;, save = TRUE, file.extension = &quot;png&quot;, ...){
+  
+  scenarios &lt;- expand.grid(substances, sites, stringsAsFactors = FALSE)
+  colnames(scenarios) &lt;- c(&quot;substance&quot;, &quot;site&quot;)
+  
+  mapply(FUN = prSubsetPlot, site = scenarios[, &quot;site&quot;], 
+         sample.col = scenarios[, &quot;substance&quot;], sample.name = substance.names,
+         MoreArgs = list(data = data, site.col = site.column, date.col = date.column,
+                         precip.col = precip.column, conditioned = trellis,
+                         save = save, file.extension = file.extension))
+
+}</code></pre>
+<p>This function has been added to the <code>IDEMdata</code> package. To see the help file, type <code>?precipPlot</code>. Below is how you would use this function to save a plot for every substance and site in the <code>wide.precip.df</code> data frame.</p>
+<pre class="r"><code>stations &lt;- unique(wide.precip.df$station[!is.na(wide.precip.df$station)])
+samples &lt;- colnames(wide.precip.df)[8:34]
+data(deep_river_chemistry)
+library(reshape2)
+wide.df &lt;- dcast(deep_river_chemistry, STATION_NAME + ACTIVITY_NO + ACTIVITY_END_DATE 
+                      + WATERBODY_NAME + UTM_EAST + UTM_NORTH + COUNTY_NAME 
+                      ~ SUBSTANCE_NAME, value.var = 'LAB_RESULT')
+names &lt;- colnames(wide.df)[8:34]
+
+precipPlot(data = wide.precip.df, sites = stations, substances = samples,
+           substance.names = names)</code></pre>
 </div>
 <div id="section" class="section level2">
 <h2>…</h2>
