--- a/precip3Ridem.html
+++ b/precip3Ridem.html
@@ -188,10 +188,11 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
     }
   
 }</code></pre>
-<p>This function takes a data frame (the argument <code>data</code>) that is in the wide format, subsets it down to a particular sampling site, creates a precipitation graph of the specified sampled data, and saves it. Let’s see if it works. The following code should save a <code>.png</code> file in your working directory.</p>
+<p>The <code>prSubsetPlot</code> function takes a data frame (the argument <code>data</code>) that is in the wide format, subsets it down to a particular sampling site, creates a precipitation graph of the specified sampled data, and saves it. Let’s see if it works. The following code should save a <code>.png</code> file in your working directory.</p>
 <pre class="r"><code>library(lattice)
 library(latticeExtra)
 
+# get the latest version of the 'IDEMdata' package
 library(devtools)
 install_github(&quot;InDEM/IDEMdata&quot;)
 library(IDEMdata)
@@ -226,7 +227,7 @@ for(i in 1:3){
 }
 
 vector.means</code></pre>
-<pre><code>## [1] 10.5000 -0.0105  0.1554</code></pre>
+<pre><code>## [1] 10.5000 -0.2292  0.1522</code></pre>
 <p>So we created the index variable <code>i</code> with the initial value of <code>1</code>, created the empty vector <code>vector.means</code> to collected the mean values in, and ran the for loop over the sequence <code>1:3</code>. This means that in the first iteration the average of the first vector in the list <code>list.of.vectors</code> is placed as the first value in <code>vector.means</code>, i.e. we have the expression <code>vector.means[1] &lt;- myMean(list.of.vectors[[1]])</code>. And the last line of the loop adds a <code>1</code> to the index variable, so <code>i</code> takes on a value of <code>2</code> for the next iteration, and we have <code>vector.means[2] &lt;- myMean(list.of.vectors[[2]])</code>. This happens a third time, when the index value is <code>3</code>, and the for loop stops after this iteration because <code>i</code> has taken the last value in the sequence.</p>
 <p>In R, you can actually simplify the expression a little bit, because you don’t have to manipulate the index variable. This will also work:</p>
 <pre class="r"><code>vector.means &lt;- c()
@@ -235,7 +236,7 @@ for(i in 1:3){
 }
 
 vector.means</code></pre>
-<pre><code>## [1] 10.5000 -0.0105  0.1554</code></pre>
+<pre><code>## [1] 10.5000 -0.2292  0.1522</code></pre>
 </div>
 <div id="apply-functions" class="section level2">
 <h2>apply functions</h2>
@@ -246,13 +247,13 @@ vector.means</code></pre>
 ## [1] 10.5
 ## 
 ## [[2]]
-## [1] -0.0105
+## [1] -0.2292
 ## 
 ## [[3]]
-## [1] 0.1554</code></pre>
+## [1] 0.1522</code></pre>
 <p><code>lapply()</code> always returns a list of objects. If we wanted the output to be a vector, we could use the <code>sapply()</code> function which simplifies what is returned.</p>
 <pre class="r"><code>sapply(list.of.vectors, myMean)</code></pre>
-<pre><code>## [1] 10.5000 -0.0105  0.1554</code></pre>
+<pre><code>## [1] 10.5000 -0.2292  0.1522</code></pre>
 </div>
 <div id="automating-the-graphs" class="section level2">
 <h2>Automating the graphs</h2>
