--- a/precip3Ridem.html
+++ b/precip3Ridem.html
@@ -207,7 +207,7 @@ prSubsetPlot(data = wide.precip.df, site = &quot;LMG-05-0009&quot;, site.col = &
 </div>
 <div id="loops" class="section level2">
 <h2>Loops</h2>
-<p>Like most programming languages, R has while loops and for loops. For loops are the most commonly used, so we’ll cover how they are written. But in R, it’s even more common to use a special family of loop operations called <code>apply()</code> functions. We’ll end up using one of those to automate our precipitation graphs, but first we’ll go over the for loop.</p>
+<p>Like most programming languages, R has while loops and for loops. Of the two, for loops are more commonly used, so we’ll cover how they are written. But in R, it’s even more common to use a special family of loop operations called <code>apply()</code> functions. We’ll end up using one of those to automate our precipitation graphs, but first we’ll go over the for loop.</p>
 </div>
 <div id="for-loop" class="section level2">
 <h2>For loop</h2>
@@ -227,7 +227,7 @@ for(i in 1:3){
 }
 
 vector.means</code></pre>
-<pre><code>## [1] 10.5000 -0.2292  0.1522</code></pre>
+<pre><code>## [1] 10.50000  0.09505  0.26758</code></pre>
 <p>So we created the index variable <code>i</code> with the initial value of <code>1</code>, created the empty vector <code>vector.means</code> to collected the mean values in, and ran the for loop over the sequence <code>1:3</code>. This means that in the first iteration the average of the first vector in the list <code>list.of.vectors</code> is placed as the first value in <code>vector.means</code>, i.e. we have the expression <code>vector.means[1] &lt;- myMean(list.of.vectors[[1]])</code>. And the last line of the loop adds a <code>1</code> to the index variable, so <code>i</code> takes on a value of <code>2</code> for the next iteration, and we have <code>vector.means[2] &lt;- myMean(list.of.vectors[[2]])</code>. This happens a third time, when the index value is <code>3</code>, and the for loop stops after this iteration because <code>i</code> has taken the last value in the sequence.</p>
 <p>In R, you can actually simplify the expression a little bit, because you don’t have to manipulate the index variable. This will also work:</p>
 <pre class="r"><code>vector.means &lt;- c()
@@ -236,28 +236,28 @@ for(i in 1:3){
 }
 
 vector.means</code></pre>
-<pre><code>## [1] 10.5000 -0.2292  0.1522</code></pre>
+<pre><code>## [1] 10.50000  0.09505  0.26758</code></pre>
 </div>
 <div id="apply-functions" class="section level2">
 <h2>apply functions</h2>
-<p>Experienced R programmers typically do not use for loops, especially for the example we just looked at. This is an ideal situation for the <code>lapply()</code> function. <code>lappy()</code> is one of a family of functions that are referred to as <code>apply</code> functions. Type <code>?apply</code> and <code>?lapply</code> to see descriptions of the many related functions.</p>
+<p>Experienced R programmers typically do not use for loops, especially in situations like the example we just looked at. This is an ideal situation for the <code>lapply()</code> function. <code>lappy()</code> is one member of a family of functions that are referred to as <code>apply</code> functions. Type <code>?apply</code> and <code>?lapply</code> to see descriptions of the many related functions.</p>
 <p><code>lapply()</code> takes just two arguments (at a minimum), <code>lapply(X, FUN, ...)</code>. <code>X</code> is a list of objects that you want to perform an operation on, and <code>FUN</code> is the function that you want to apply to each object. In our situation, we want to apply <code>myMean()</code> to <code>list.of.vectors</code>.</p>
 <pre class="r"><code>lapply(list.of.vectors, myMean)</code></pre>
 <pre><code>## [[1]]
 ## [1] 10.5
 ## 
 ## [[2]]
-## [1] -0.2292
+## [1] 0.09505
 ## 
 ## [[3]]
-## [1] 0.1522</code></pre>
+## [1] 0.2676</code></pre>
 <p><code>lapply()</code> always returns a list of objects. If we wanted the output to be a vector, we could use the <code>sapply()</code> function which simplifies what is returned.</p>
 <pre class="r"><code>sapply(list.of.vectors, myMean)</code></pre>
-<pre><code>## [1] 10.5000 -0.2292  0.1522</code></pre>
+<pre><code>## [1] 10.50000  0.09505  0.26758</code></pre>
 </div>
 <div id="automating-the-graphs" class="section level2">
 <h2>Automating the graphs</h2>
-<p>Now, if we want to make a lot of precipitation graphs, we need to set up our code so that we can easily loop through all of the arguments necessary for each plot. For example, if we wanted to plot 3 different sampling substances at 2 sites, we could visualize these scenarios in a data frame.</p>
+<p>Now, if we want to make a lot of precipitation graphs, we need to set up our code so that we can easily loop through all of the arguments necessary for each plot. For example, if we wanted to plot 3 different sampling substances at 2 sites, we could represent these scenarios as rows in a data frame.</p>
 <pre class="r"><code>substance &lt;- c(&quot;sat&quot;, &quot;e_coli&quot;, &quot;ph&quot;)
 station &lt;- c(&quot;LMG-05-0009&quot;, &quot;LMG-05-0004&quot;)
 scenarios &lt;- expand.grid(substance, station, stringsAsFactors = FALSE)
@@ -270,7 +270,7 @@ scenarios</code></pre>
 ## 4       sat LMG-05-0004
 ## 5    e_coli LMG-05-0004
 ## 6        ph LMG-05-0004</code></pre>
-<p>One way to run the <code>precipSubsetPlot()</code> function on all of these scenarios is to use a for loop that loops through the index of rows on the data frame. The only thing we’re missing is the label for the substance on the graph, so first we’ll create a vector of substance names.</p>
+<p>One way to run the <code>prSubsetPlot()</code> function on all of these scenarios is to use a for loop that loops through the index of rows on the data frame. The only thing we’re missing is the label for the substance on the graph, so first we’ll create a vector of substance names.</p>
 <pre class="r"><code>substance.names &lt;- scenarios[, &quot;substance&quot;]
 substance.names[substance.names == &quot;sat&quot;] &lt;- &quot;% Saturation&quot;
 substance.names[substance.names == &quot;e_coli&quot;] &lt;- &quot;E. coli (MPN/100mL)&quot;
@@ -304,7 +304,7 @@ for(i in 1:dim(scenarios)[1]){
                          save = save, file.extension = file.extension))
 
 }</code></pre>
-<p>This function has been added to the <code>IDEMdata</code> package. To see the help file, type <code>?precipPlot</code>. Below is how you would use this function to save a plot for every substance and site in the <code>wide.precip.df</code> data frame.</p>
+<p>This function has been added to the <code>IDEMdata</code> package. To see the help file, type <code>?precipPlot</code>. Below is how you would use this function to save a plot for every substance at every site in the <code>wide.precip.df</code> data frame.</p>
 <pre class="r"><code>stations &lt;- unique(wide.precip.df$station[!is.na(wide.precip.df$station)])
 samples &lt;- colnames(wide.precip.df)[8:34]
 
