--- a/precip3Ridem.html
+++ b/precip3Ridem.html
@@ -66,7 +66,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <pre class="r"><code>myFunction &lt;- function(){
   
 }</code></pre>
-<p>So functions are created just like other variables in R, with the assignment operator <code>&lt;-</code>. Arguments for the function are placed inside the brackets <code>()</code> and the statements for the function are placed inside the braces <code>{}</code>. The last line of the statements will be returned when the function is used. For example, here is a function that calculates the mean of a vector.</p>
+<p>So functions are created just like other variables in R, with the assignment operator <code>&lt;-</code>. Arguments for the function are placed inside the brackets <code>()</code> and the statements for the function are placed inside the braces <code>{}</code>. The last line of the statements will be returned when the function is used.</p>
+<p>For example, here is a function that calculates the mean of a vector.</p>
 <pre class="r"><code>myMean &lt;- function(vector){
   sum.of.vector &lt;- sum(vector)
   number.of.values &lt;- length(vector)
@@ -80,7 +81,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <div id="plot-function" class="section level2">
 <h2>Plot function</h2>
 <p>We’re going to write our own function that will take watershed data and create a precipitation graph. We’ll call our function <code>prPlot()</code> and it’ll have the following general outline:</p>
-<pre class="r"><code>prPlot &lt;- function(date, precip, sample, trellis = FALSE){
+<pre class="r"><code>prPlot &lt;- function(date, precip, sample, trellis = TRUE, sample.label){
   
   if(trellis == FALSE){
     
@@ -95,9 +96,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
   # double y scale plot statements
   
 }</code></pre>
-<p>The requirements for the arguments are that <code>date</code> has the <code>&quot;Date&quot;</code> class and that <code>precip</code> and <code>sample</code> have the <code>&quot;numeric&quot;</code> class; that the three vectors are of the same length (and are ordered appropriately); and that <code>trellis</code> is either <code>TRUE</code> or <code>FALSE</code>.</p>
+<p>The requirements for the arguments are that <code>date</code> has the <code>&quot;Date&quot;</code> class and that <code>precip</code> and <code>sample</code> have the <code>&quot;numeric&quot;</code> class; that the three vectors are of the same length (and are ordered appropriately); that <code>trellis</code> is either <code>TRUE</code> or <code>FALSE</code>; and that <code>sample.label</code> is a string.</p>
 <p>Now we’ll place code for the plot in braces.</p>
-<pre class="r"><code>prPlot &lt;- function(date, precip, sample, trellis, sample.label){
+<pre class="r"><code>prPlot &lt;- function(date, precip, sample, trellis = TRUE, sample.label){
   
   if(trellis == FALSE){
     
@@ -222,7 +223,7 @@ for(i in 1:3){
 }
 
 vector.means</code></pre>
-<pre><code>## [1] 10.5000 -0.4185 -0.2508</code></pre>
+<pre><code>## [1] 10.5000 -0.3082  0.3264</code></pre>
 <p>So we created the index variable <code>i</code> with the initial value of <code>1</code>, created the empty vector <code>vector.means</code> to collected the mean values in, and ran the for loop over the sequence <code>1:3</code>. This means that in the first iteration the average of the first vector in the list <code>list.of.vectors</code> is placed as the first value in <code>vector.means</code>, i.e. we have the expression <code>vector.means[1] &lt;- myMean(list.of.vectors[[1]])</code>. And the last line of the loop adds a <code>1</code> to the index variable, so <code>i</code> takes on a value of <code>2</code> for the next iteration, and we have <code>vector.means[2] &lt;- myMean(list.of.vectors[[2]])</code>. This happens a third time, when the index value is <code>3</code>, and the for loop stops after this iteration because <code>i</code> has taken the last value in the sequence.</p>
 <p>In R, you can actually simplify the expression a little bit, because you don’t have to manipulate the index variable. This will also work:</p>
 <pre class="r"><code>vector.means &lt;- c()
@@ -231,7 +232,7 @@ for(i in 1:3){
 }
 
 vector.means</code></pre>
-<pre><code>## [1] 10.5000 -0.4185 -0.2508</code></pre>
+<pre><code>## [1] 10.5000 -0.3082  0.3264</code></pre>
 </div>
 <div id="apply-functions" class="section level2">
 <h2>apply functions</h2>
@@ -242,13 +243,13 @@ vector.means</code></pre>
 ## [1] 10.5
 ## 
 ## [[2]]
-## [1] -0.4185
+## [1] -0.3082
 ## 
 ## [[3]]
-## [1] -0.2508</code></pre>
+## [1] 0.3264</code></pre>
 <p><code>lapply()</code> always returns a list of objects. If we wanted the output to be a vector, we could use the <code>sapply()</code> function which simplifies what is returned.</p>
 <pre class="r"><code>sapply(list.of.vectors, myMean)</code></pre>
-<pre><code>## [1] 10.5000 -0.4185 -0.2508</code></pre>
+<pre><code>## [1] 10.5000 -0.3082  0.3264</code></pre>
 </div>
 <div id="automating-the-graphs" class="section level2">
 <h2>Automating the graphs</h2>
