--- a/precip3Ridem.html
+++ b/precip3Ridem.html
@@ -208,36 +208,24 @@ prSubsetPlot(data = wide.precip.df, site = &quot;LMG-05-0009&quot;, site.col = &
 <div id="for-loop" class="section level2">
 <h2>For loop</h2>
 <p>In most programming languages, the for loop would typically be set up in this way:</p>
-<pre class="r"><code>i &lt;- 1
-for(i in sequence){
+<pre class="r"><code>for(i in sequence){
   
   # operation indexed by i
   
-  i &lt;- i + 1
-  
 }</code></pre>
-<p>So you first create an index variable, traditionally named <code>i</code>, and give it an initial value of <code>1</code> (or <code>0</code>, or whatever initial value makes sense for the situation). The <code>sequence</code> variable would be a sequence of values that you want the index variable to take while the statements in the brackets are iterated. In most cases it is a sequence of integers. And at the end you advance the index variable so that it takes the next value in the sequence (in most cases, it is just the next integer, <code>+ 1</code>).</p>
+<p>The index variable, traditionally named <code>i</code>, is given an initial value of <code>1</code> (or <code>0</code>, or whatever initial value makes sense for the situation). The <code>sequence</code> variable would be a sequence of values that you want the index variable to take while the statements in the brackets are iterated. In most cases it is a sequence of integers. And at the end of a single iteration of the loop, the index variable is advanced to the next value in the sequence (in most cases, it is just the next integer, <code>i + 1</code>).</p>
 <p>Lets look at a real example using the <code>myMean()</code> function we created above.</p>
 <pre class="r"><code>list.of.vectors &lt;- list(1:20, rnorm(10), rnorm(30))
 
-i &lt;- 1
 vector.means &lt;- c()
-for(i in 1:3){
-  vector.means[i] &lt;- myMean(list.of.vectors[[i]])
-  i &lt;- i + 1
-}
 
-vector.means</code></pre>
-<pre><code>## [1] 10.500000 -0.885082 -0.002909</code></pre>
-<p>So we created the index variable <code>i</code> with the initial value of <code>1</code>, created the empty vector <code>vector.means</code> to collected the mean values in, and ran the for loop over the sequence <code>1:3</code>. This means that in the first iteration the average of the first vector in the list <code>list.of.vectors</code> is placed as the first value in <code>vector.means</code>, i.e. we have the expression <code>vector.means[1] &lt;- myMean(list.of.vectors[[1]])</code>. And the last line of the loop adds a <code>1</code> to the index variable, so <code>i</code> takes on a value of <code>2</code> for the next iteration, and we have <code>vector.means[2] &lt;- myMean(list.of.vectors[[2]])</code>. This happens a third time, when the index value is <code>3</code>, and the for loop stops after this iteration because <code>i</code> has taken the last value in the sequence.</p>
-<p>In R, you can actually simplify the expression a little bit, because you don’t have to manipulate the index variable. This will also work:</p>
-<pre class="r"><code>vector.means &lt;- c()
 for(i in 1:3){
   vector.means[i] &lt;- myMean(list.of.vectors[[i]])
 }
 
 vector.means</code></pre>
-<pre><code>## [1] 10.500000 -0.885082 -0.002909</code></pre>
+<pre><code>## [1] 10.5000 -0.5693  0.1766</code></pre>
+<p>So we create the empty vector <code>vector.means</code> to collect the mean values in, and the index variable <code>i</code> takes an initial value of <code>1</code>. Then the for loop runs over the sequence <code>1:3</code>. This means that in the first iteration the average of the first vector in the list <code>list.of.vectors</code> is placed as the first value in <code>vector.means</code>, i.e. we have the expression <code>vector.means[1] &lt;- myMean(list.of.vectors[[1]])</code>. After the first loop is completed the index variable advances one step, so <code>i</code> takes on a value of <code>2</code> for the next iteration, and we have <code>vector.means[2] &lt;- myMean(list.of.vectors[[2]])</code>. This happens a third time, when the index value is <code>3</code>, and the for loop stops after this iteration because <code>i</code> has taken the last value in the sequence.</p>
 </div>
 <div id="apply-functions" class="section level2">
 <h2>apply functions</h2>
@@ -248,13 +236,13 @@ vector.means</code></pre>
 ## [1] 10.5
 ## 
 ## [[2]]
-## [1] -0.8851
+## [1] -0.5693
 ## 
 ## [[3]]
-## [1] -0.002909</code></pre>
+## [1] 0.1766</code></pre>
 <p><code>lapply()</code> always returns a list of objects. If we wanted the output to be a vector, we could use the <code>sapply()</code> function which simplifies what is returned.</p>
 <pre class="r"><code>sapply(list.of.vectors, myMean)</code></pre>
-<pre><code>## [1] 10.500000 -0.885082 -0.002909</code></pre>
+<pre><code>## [1] 10.5000 -0.5693  0.1766</code></pre>
 </div>
 <div id="automating-the-graphs" class="section level2">
 <h2>Automating the graphs</h2>
